--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -22,6 +22,6 @@
     <button id="start-btn">Старт</button>
     <div id="timer">00:00:00</div>
 
-    <script src="1-timer.js"></script>
+    <script src="./js/1-timer.js"></script>
   </body>
 </html>
