--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Генератор промісів</title>
-    <script type="module" src="2-snackbar.js"></script>
+    <script type="module" src="./js/2-snackbar.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/css/iziToast.min.css"
