--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -29,5 +29,6 @@
     </form>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/js/iziToast.min.js"></script>
+    <script src="./2-snackbar.html" defer></script>
   </body>
 </html>
