--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -29,7 +29,6 @@
       <span data-seconds>00</span>
     </div>
 
-    <script src="./1-timer.html"></script>
-    <script src="./js/1-timer.js"></script>
+    <script type="module" src="./js/1-timer.js"></script>
   </body>
 </html>
