--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Генератор промісів</title>
-    <script type="module" src="2-snackbar.js"></script>
   </head>
   <body>
     <form class="form">
@@ -29,6 +28,6 @@
     </form>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/js/iziToast.min.js"></script>
-    <script src="./2-snackbar.html" defer></script>
+    <script type="module" src="./2-snackbar.html"></script>
   </body>
 </html>
