--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Таймер зворотного відліку</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/izitoast/dist/css/iziToast.min.css"
+    />
     <style>
       #timer {
         font-size: 2rem;
@@ -12,22 +20,22 @@
         margin-top: 20px;
       }
     </style>
-    <script type="module" src="./js/1-timer.js"></script>
   </head>
   <body>
     <h1>Таймер зворотного відліку</h1>
-
     <label>
       Виберіть дату:
       <input type="text" id="datetime-picker" />
     </label>
-
-    <button type="button" id="start-btn" data-start>Старт</button>
+    <button type="button" id="start-btn" disabled>Старт</button>
 
     <div id="timer">
-      <span data-days>00</span>: <span data-hours>00</span>:
-      <span data-minutes>00</span>:
-      <span data-seconds>00</span>
+      <span data-days>00</span> днів : <span data-hours>00</span> годин :
+      <span data-minutes>00</span> хвилин : <span data-seconds>00</span> секунд
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script src="https://cdn.jsdelivr.net/npm/izitoast/dist/js/iziToast.min.js"></script>
+    <script type="module" src="./js/1-timer.js"></script>
   </body>
 </html>
